--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "categories": [
         "Languages"
     ],
-    "icon": "/images/logo.png",
+    "icon": "images/logo.png",
     "repository": {
         "type": "git",
         "url": "https://github.com/explooosion/PoeFilterSyntax"
