Update log, description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "poe-filter",
     "displayName": "POE Filter",
-    "description": "Syntax support for POE filter.",
+    "description": "Highlighting for POE filter.",
     "version": "0.1.1",
     "license": "MIT",
     "author": "Robby",
