--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,20 @@
 {
     "version": "0.1.0",
     "configurations": [
-        {
-            "name": "Extension",
-            "type": "extensionHost",
-            "request": "launch",
-            "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceRoot}" ]
-        }
+      {
+        "name": "Launch Extension",
+        "type": "extensionHost",
+        "request": "launch",
+        "runtimeExecutable": "${execPath}",
+        "args": [
+            "--extensionDevelopmentPath=${workspaceFolder}"
+        ],
+        "stopOnEntry": false,
+        "sourceMaps": true,
+        "outFiles": [
+            "${workspaceRoot}/dist/**/*.js"
+        ],
+        "preLaunchTask": "npm: test-compile"
+    },
     ]
 }
