--- a/package.json
+++ b/package.json
@@ -20,22 +20,43 @@
     "bugs": {
         "url": "https://github.com/explooosion/PoeFilterSyntax/issues"
     },
+    "main": "./dist/extension",
+    "activationEvents": ["workspaceContains:*.filter"],
+    "scripts": {
+        "vscode:prepublish": "webpack --mode production",
+        "compile": "webpack --mode none",
+        "watch": "webpack --mode none --watch",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test-compile": "webpack --mode development"
+    },
     "contributes": {
-        "languages": [{
-            "id": "filter",
-            "aliases": [
-                "Filter",
-                "filter"
-            ],
-            "extensions": [
-                ".filter"
-            ],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "filter",
-            "scopeName": "source.filter",
-            "path": "./syntaxes/Filter.tmLanguage.json"
-        }]
+        "languages": [
+            {
+                "id": "filter",
+                "aliases": [
+                    "Filter",
+                    "filter"
+                ],
+                "extensions": [
+                    ".filter"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "filter",
+                "scopeName": "source.filter",
+                "path": "./syntaxes/Filter.tmLanguage.json"
+            }
+        ]
+    },
+    "devDependencies": {
+        "@types/node": "^12.0.10",
+        "ts-loader": "^6.0.4",
+        "typescript": "^3.5.2",
+        "vscode": "^1.1.34",
+        "webpack": "^4.35.0",
+        "webpack-cli": "^3.3.4"
     }
 }
