--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "poe-filter",
 	"displayName": "POE Filter",
 	"description": "Highlighting for POE filter.",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"license": "MIT",
 	"author": "Robby",
 	"publisher": "robby",
@@ -20,15 +20,17 @@
 	"bugs": {
 		"url": "https://github.com/explooosion/PoeFilterSyntax/issues"
 	},
-  "main": "./dist/extension",
-  "activationEvents": ["workspaceContains:*.filter"],
-  "scripts": {
-      "vscode:prepublish": "webpack --mode production",
-      "compile": "webpack --mode none",
-      "watch": "webpack --mode none --watch",
-      "postinstall": "node ./node_modules/vscode/bin/install",
-      "test-compile": "webpack --mode development"
-  },
+	"main": "./dist/extension",
+	"activationEvents": [
+		"workspaceContains:*.filter"
+	],
+	"scripts": {
+		"vscode:prepublish": "webpack --mode production",
+		"compile": "webpack --mode none",
+		"watch": "webpack --mode none --watch",
+		"postinstall": "node ./node_modules/vscode/bin/install",
+		"test-compile": "webpack --mode development"
+	},
 	"contributes": {
 		"languages": [
 			{
@@ -56,12 +58,12 @@
 		"publisherDisplayName": "Robby",
 		"publisherId": "d3da4c8a-6031-4a1b-8bc5-fc54c208c025"
 	},
-  "devDependencies": {
-      "@types/node": "^12.0.10",
-      "ts-loader": "^6.0.4",
-      "typescript": "^3.5.2",
-      "vscode": "^1.1.34",
-      "webpack": "^4.35.0",
-      "webpack-cli": "^3.3.4"
-  }
+	"devDependencies": {
+		"@types/node": "^12.0.10",
+		"ts-loader": "^6.0.4",
+		"typescript": "^3.5.2",
+		"vscode": "^1.1.34",
+		"webpack": "^4.35.0",
+		"webpack-cli": "^3.3.4"
+	}
 }
