--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 					"filter"
 				],
 				"extensions": [
-					".filter"
+					".filter",
+					".ruthlessfilter"
 				],
 				"configuration": "./language-configuration.json"
 			}
